fix X scrolling on iphone

--- a/css/main-page-blocks/activities.css
+++ b/css/main-page-blocks/activities.css
@@ -3,7 +3,7 @@
 }
 
 .activities__container {
-    overflow-x: hidden;
+    overflow: visible;
 }
 
 .activities__title {
